# storypy

./: .gitignore  .readme.md  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
additional_files/: diagnostics.py  plotting.py
docs/source/: ._conf.py  conf.py  index.rst
docs/source/getting_started/: installing.rst  overview.rst  picontrol.rst
docs/source/reference/: _debug.rst  api.rst  compute.rst  data.rst  evaluate.rst  preprocess.rst  utils.rst
notebooks/: sp_edj_richard.ipynb  sp_ghosh_2023.ipynb  sp_mindlin_2020.ipynb  sp_monerie_2023.ipynb  storyline_application_ZS.py  test.py  test_user.ipynb  zappa_and_shepherd_notebook.ipynb  zappa_shepherd.ipynb
notebooks/ZS_17/: sp_zappa_shepherd_2017.ipynb  zs_option_AandB.ipynb
storypy/: __init__.py  _plot_ellipse.py  confi.py  diagnostics.py  main.py  plot.py  plotting.py  processing.py  regression.py  utils.py
storypy/compute/: __init__.py  _compute_driver.py  _mlr.py  _regres.py  _stippling.py
storypy/data/: __init__.py  _read_data.py
storypy/data/drivers/: monerie23_drivers.nc  zs17_drivers.nc
storypy/data/regression_output/pr/: R2.nc  (+3 more)
storypy/data/remote_drivers/: drivers.csv  scaled_drivers.csv  scaled_standardized_drivers.csv
storypy/data/targets/: mindlin20_target_pr_DJF.nc  mindlin20_target_pr_JJA.nc  monerie23_target_pr_JAS.nc  zs17_target_pr_NDJFM.nc  zs17_target_u850_NDJFM.nc
storypy/evaluate/plot/: __init__.py  _plotting.py  _storylines.py
storypy/preprocess/: __init__.py  _diagnostics.py  _esmval_processor.py  _netcdf_processor.py
tests/: test_data.py
(+4 files in other folders)
