[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storypy"
version = "0.1.4"
description = "A Python package to compute climate storylines"
authors = [
    { name = "Richard Alawode", email = "richard.alawode@uni-leipzig.de" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "matplotlib",
    "pandas",
    "numpy",
    "cartopy",
    "imageio",
    "netcdf4",
    "scipy",
    "regionmask",
    "scikit-learn",
    "shapely",
    "fnmatch2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[project.urls]
Homepage = "https://github.com/LIM-Climate-Causality/storypy"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
storypy = [
    "*.yml",
    "*.nc",
    "*.json",
    "*.csv",
    "data/regression_output/pr/*",
    "data/regression_output/ua/*",
    "data/remote_drivers/*.csv",
]